--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,21 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/assets/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+
+bin/batch.sh
