--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,31 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "debril/feed-io": "^6.0",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.13",
+        "gesdinet/jwt-refresh-token-bundle": "^1.1",
+        "guzzlehttp/guzzle": "^7.5",
+        "mhujer/breadcrumbs-bundle": "^1.5",
+        "neitanod/forceutf8": "^2.0",
+        "ramsey/uuid": "^4.5",
+        "ramsey/uuid-doctrine": "^1.8",
+        "rollerworks/password-strength-validator": "^1.7",
+        "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
+        "symfony/form": "6.1.*",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/mailer": "6.1.*",
+        "symfony/monolog-bundle": "^3.8",
+        "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
+        "symfony/security-bundle": "6.1.*",
+        "symfony/validator": "6.1.*",
+        "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.1.*"
-    },
-    "require-dev": {
     },
     "config": {
         "allow-plugins": {
@@ -67,5 +84,11 @@
             "allow-contrib": false,
             "require": "6.1.*"
         }
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.7",
+        "symfony/maker-bundle": "^1.47",
+        "symfony/stopwatch": "6.1.*",
+        "symfony/web-profiler-bundle": "6.1.*"
     }
 }
